--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
-nav ul {
+body {
+  background-color: #dbe5de;
+  background-image: url("data:image/svg+xml,%3Csvg width='40' height='1' viewBox='0 0 40 1' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h20v1H0z' fill='%2392ac92' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+  font-size: 1rem;
+  padding: 1rem;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.nav {
+  width: 15rem;
+}
+
+.nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+.nav li {
+  padding: 0.7rem 1rem;
+  border-bottom: 1px solid black;
+}
+
+.nav li:last-child {
+  border-bottom: none;
+}
+
+.nav a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.nav-open {
+  background: white;
 }
